--- a/backend/templates/registration/base.html
+++ b/backend/templates/registration/base.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Django & React Starter</title>
+        <title>Csyllabus</title>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <link rel="stylesheet" href="{% static "stylesheets.css" %}">
 
