--- a/backend/templates/registration/login.html
+++ b/backend/templates/registration/login.html
@@ -5,7 +5,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>Admin</b>LTE</a>
+            <a href="#"><b>CSyllabus</b></a>
         </div>
         <div class="login-box-body">
             <form action="{% url "login" %}?next={{ request.GET.next }}" method="post">
