--- a/frontend/csyllabus/src/app/angular-material/explorer/explorer.component.css
+++ b/frontend/csyllabus/src/app/angular-material/explorer/explorer.component.css
@@ -12,3 +12,30 @@
 .containerexp{
     width: 70%;
 }
+
+/* Structure */
+.exeplorer-table-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+
+.exeplorer-table-header {
+  min-height: 64px;
+  display: flex;
+  align-items: baseline;
+  padding: 8px 24px 0;
+  font-size: 20px;
+  justify-content: space-between;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  flex-grow: 1;
+  margin-left: 32px;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
