Create Result class, use to display result on table view

--- a/frontend/csyllabus/src/app/angular-material/explorer/app.component.html
+++ b/frontend/csyllabus/src/app/angular-material/explorer/app.component.html
@@ -1,8 +1,17 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <app-core></app-core>
-</div>
+<!-- -*- coding: utf-8 -*-
+# @Author: Adrien Roques
+# @Date:   2017-11-03
+# @Last Modified by:   Adrien Roques
+# @Last Modified time: 2017-11-03 -->
+
+<body ng-app="myApp" ng-cloak layout="column">
+  <div layout="column" flex>
+    <div class="search-explorer-layout">
+    SearchExplorerLayout
+    </div>
+    <div class="table-explorer-layout">
+    TableExplorerLayout
+    </div>
+  </div>>
+</body>
 
