--- a/frontend/csyllabus/src/app/angular-material/explorer/explorer.component.html
+++ b/frontend/csyllabus/src/app/angular-material/explorer/explorer.component.html
@@ -1,3 +1,9 @@
+<!-- -*- coding: utf-8 -*-
+# @Author: Filitp, Sebastian, Adrien Roques
+# @Date:   2017-11-03
+# @Last Modified by:   Adrien Roques
+# @Last Modified time: 2017-11-03 -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -65,6 +71,7 @@
   </div>
   <div></div>
 
+  <!-- Explorer Table Result -->
   <div class="explorer-table-container mat-elevation-z8">
     <div class="explorer-table-header">
       <mat-form-field floatPlaceholder="never">
