--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -1,3 +1,5 @@
+
+
 .bgexplorer {
     max-width: 100%;
     width: 100%;
@@ -8,10 +10,23 @@
     height: 100vh !important;
     max-height: 100%;
     background-image: url(../../images/world.jpg);
-    background-size: cover;  
+    background-size: cover; 
+    
+}
+h1{
+    font-family:  'Inconsolata';
+    color: white;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    font-weight: bold;
+}
+h2{
+    font-family:  'Roboto Condensed', sans-serif;
+    margin-top: 0%;
 }
 .logo {
-    margin: 15%;
+    margin-bottom: 0%;
+    margin-top: 10%;    
   }
 .container {
     align-self: center;
