--- a/frontend/csyllabus/src/app/angular-material/explorer/explorer.component.html
+++ b/frontend/csyllabus/src/app/angular-material/explorer/explorer.component.html
@@ -12,7 +12,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="stylesheet"
         href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
@@ -105,7 +105,7 @@
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-row color="white" *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </div>
 
