--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -10,8 +10,8 @@
     height: 100vh !important;
     max-height: 100%;
     background-image: url(../../images/world.jpg);
-    background-size: cover; 
-    
+    background-size: cover;
+    background-position: center center;
 }
 h1{
     font-family:  'Inconsolata';
@@ -32,7 +32,8 @@ h2{
     align-self: center;
     margin: 20px;
     background: white;
-    max-width: 80%;
+    max-width: 60%;
+    max-height: 80%;
     position: relative;
     margin-left: 20%;
     margin-right: 20%;
