--- a/frontend/csyllabus/src/app/core/explorer/explorer.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/explorer.component.css
@@ -15,10 +15,12 @@
 .selector {
     margin: 0px;
 }
+@media all and (min-width: 900px) {
 .columns{
-    -webkit-column-count: 2; /* Chrome, Safari, Opera */
-    -moz-column-count: 2; /* Firefox */
+       -webkit-column-count: 2; 
+    -moz-column-count: 2; 
     column-count:2;
+}
 }
 .form{
     margin: 20px;
