--- a/frontend/csyllabus/src/app/core/explorer/explorer.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/explorer.component.css
@@ -25,3 +25,52 @@
 .form{
     margin: 20px;
 }
+
+/* Table Result Definition */
+/* -*- coding: utf-8 -*-
+# @Author: Adrien Roques
+# @Date:   2017-11-03
+# @Last Modified by:   Adrien Roques
+# @Last Modified time: 2017-11-04 */
+.explorer-table-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+
+
+.explorer-table-header {
+  min-height: 34px;
+  display: flex;
+  font-size: 20px;
+  justify-content: center;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  flex-grow: 1;
+  margin-left: 32px;
+}
+
+.mat-header-row {
+  background: #00008B;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+  text-align: left;
+}
+
+.mat-header-cell {
+  color: #F8F8FF;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.mat-cell {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px; /* TODO MODIFY */
+}
+
