--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,5 +1,6 @@
 <div class="bgexplorer">
   <img src="https://image.ibb.co/fQCOXb/logo.png" height="140" width="140">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   <h1>CSYLLABUS v1.0</h1>
   <h2>Global Computer Science Repository</h2>
   <div class="container" align="center">
