--- a/frontend/csyllabus/src/app/core/explorer/result/result.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/result/result.component.css
@@ -26,12 +26,13 @@
 }
 
 .mat-header-row {
-  background: #00008B;
+  background: #3F51B5;
+  
 }
 
 .mat-table {
   overflow: auto;
-  text-align: left;  
+  text-align: left;
   height: 100%;
 }
 
@@ -44,5 +45,6 @@
 .mat-cell {
   display: flex;
   justify-content: space-between;
+  font-weight: bold;
 }
 
