--- a/frontend/csyllabus/src/app/core/explorer/result/result.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/result/result.component.html
@@ -9,7 +9,7 @@
     <div class="explorer-table-container">
       <mat-table #table [dataSource]="dataSource">
         <!-- Score Column -->
-        <ng-container matColumnDef="score">
+        <ng-container matColumnDef="score" color="primary">
           <mat-header-cell *matHeaderCellDef> Score </mat-header-cell>
           <mat-cell *matCellDef="let row"> {{row.score}}% </mat-cell>
         </ng-container>
@@ -38,5 +38,21 @@
         <mat-row color="white" *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
     </div>
+
+    <mat-card>
+      <mat-card-subtitle>Subtitle</mat-card-subtitle>
+      <mat-card-title>Card with title and footer</mat-card-title>
+      <mat-card-content>
+        <p>This is supporting text.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+
   </div>
 </div>
+
+
