--- a/frontend/csyllabus/src/app/core/explorer/result/result.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/result/result.component.html
@@ -8,50 +8,35 @@
     </div>
     <div class="explorer-table-container">
       <mat-table #table [dataSource]="dataSource">
+
         <!-- Score Column -->
-        <ng-container matColumnDef="score" color="primary">
+        <ng-container matColumnDef="score">
           <mat-header-cell *matHeaderCellDef> Score </mat-header-cell>
-          <mat-cell *matCellDef="let row"> {{row.score}}% </mat-cell>
+          <mat-cell *matCellDef="let row"> {{row.score}} </mat-cell>         
         </ng-container>
-        <!-- Country Column -->
-        <ng-container matColumnDef="country">
-          <mat-header-cell *matHeaderCellDef> Country </mat-header-cell>
-          <mat-cell *matCellDef="let row"> {{row.country}} </mat-cell>
-        </ng-container>
-        <!-- University Column -->
-        <ng-container matColumnDef="university">
-          <mat-header-cell *matHeaderCellDef> University </mat-header-cell>
-          <mat-cell *matCellDef="let row"> {{row.university}} </mat-cell>
-        </ng-container>
-        <!-- Professor Column -->
-        <ng-container matColumnDef="professor">
-          <mat-header-cell *matHeaderCellDef> Professor </mat-header-cell>
-          <mat-cell *matCellDef="let row"> {{row.professor}} </mat-cell>
-        </ng-container>
-        <!-- Syllabus Column -->
-        <ng-container matColumnDef="syllabus">
-          <mat-header-cell *matHeaderCellDef> Syllabus </mat-header-cell>
-          <mat-cell *matCellDef="let row"> {{row.syllabus}} </mat-cell>
+
+        <!-- Result Column -->
+        <ng-container matColumnDef="result">
+          <mat-header-cell *matHeaderCellDef> Result </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <mat-card>
+              <mat-card-subtitle>{{row.country}}</mat-card-subtitle>
+              <mat-card-title>{{row.university}} </mat-card-title>
+              <mat-card-content>
+                <p>{{row.syllabus}} </p>
+              </mat-card-content>
+              <mat-card-actions>
+                <button mat-button>LIKE</button>
+                <button mat-button>SHARE</button>
+              </mat-card-actions>
+            </mat-card>
+          </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row color="white" *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        <mat-row color="primary" *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
     </div>
-
-    <mat-card>
-      <mat-card-subtitle>Subtitle</mat-card-subtitle>
-      <mat-card-title>Card with title and footer</mat-card-title>
-      <mat-card-content>
-        <p>This is supporting text.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
-
   </div>
 </div>
 
