--- a/frontend/csyllabus/src/app/core/explorer/result/result.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/result/result.component.html
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <div layout="column">
   <!-- Explorer Table Result -->
   <div class="explorer-table-container mat-elevation-z8">
@@ -12,7 +14,7 @@
         <!-- Score Column -->
         <ng-container matColumnDef="score">
           <mat-header-cell *matHeaderCellDef> Score </mat-header-cell>
-          <mat-cell *matCellDef="let row"> {{row.score}} </mat-cell>         
+          <mat-cell *matCellDef="let row"> {{row.score}} </mat-cell>
         </ng-container>
 
         <!-- Result Column -->
@@ -20,15 +22,41 @@
           <mat-header-cell *matHeaderCellDef> Result </mat-header-cell>
           <mat-cell *matCellDef="let row">
             <mat-card>
-              <mat-card-subtitle>{{row.country}}</mat-card-subtitle>
-              <mat-card-title>{{row.university}} </mat-card-title>
-              <mat-card-content>
-                <p>{{row.syllabus}} </p>
-              </mat-card-content>
-              <mat-card-actions>
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
-              </mat-card-actions>
+              <mat-grid-list cols="4">
+                <mat-grid-tile [style.border-right]="'1px dashed #ddd'">
+                  <md-card-title-group>
+                    <mat-card-title>{{row.university}} </mat-card-title>
+                    <mat-card-subtitle>{{row.country}}</mat-card-subtitle>
+                    <mat-card-subtitle>{{row.syllabus}}</mat-card-subtitle>
+                    <mat-card-subtitle>{{row.professor}}</mat-card-subtitle>
+                  </md-card-title-group>
+                </mat-grid-tile>
+                <mat-grid-tile [style.border-right]="'1px dashed #ddd'">
+                  <mat-card-content>
+                    {{row.description}}
+                  </mat-card-content>
+                </mat-grid-tile>
+                <mat-grid-tile [style.border-right]="'1px dashed #ddd'">
+                  <mat-card-content>
+                    <mat-card-actions>
+                      <mat-list>
+                        <mat-list-item>
+                          <button mat-button color="primary">RATING</button>
+                        </mat-list-item>
+                        <mat-list-item>
+                          <button mat-button color="primary">SOCIAL</button>
+                        </mat-list-item>
+                        <mat-list-item>
+                          <button mat-button color="primary">MORE</button>
+                        </mat-list-item>
+                      </mat-list>
+                    </mat-card-actions>
+                  </mat-card-content>
+                </mat-grid-tile>
+                <mat-grid-tile [style.border-right]="'1px dashed #ddd'">
+                  <img mat-card-avatar src={{row.blazon}} />
+                </mat-grid-tile>
+              </mat-grid-list>
             </mat-card>
           </mat-cell>
         </ng-container>
