--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -1,12 +1,12 @@
 
 <div class="form">
 <div class="columns" flex>
-<form>
+<form class="form">
 <mat-form-field class="input">
-  <input placeholder="What do you want to study?" matInput [matAutocomplete]="auto">
+  <input placeholder="What do you want to study?" matInput [formControl]="controlcourses" [matAutocomplete]="auto">
   <mat-autocomplete #auto="matAutocomplete">
-    <mat-option *ngFor="let course of coursesavailable | async" [value]="course">
-      {{ course }}
+    <mat-option *ngFor="let course of coursesavailable" [value]="course.name">
+      {{ course.name }}
     </mat-option>
   </mat-autocomplete>
 </mat-form-field>
