--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -3,9 +3,9 @@
 <div class="columns" flex>
 <form class="form">
 <mat-form-field class="input">
-  <input placeholder="What do you want to study?" matInput [formControl]="controlcourses" [matAutocomplete]="auto">
+  <input placeholder="What do you want to study?" matInput [formControl]="controlCourses" [matAutocomplete]="auto">
   <mat-autocomplete #auto="matAutocomplete">
-    <mat-option *ngFor="let course of coursesavailable" [value]="course.name">
+    <mat-option *ngFor="let course of coursesAvailable" [value]="course.name">
       {{ course.name }}
     </mat-option>
   </mat-autocomplete>
