--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -31,8 +31,8 @@
 <br/>
 <mat-form-field class="selector">
   <mat-select placeholder="Semester">
-    <mat-option *ngFor="let sem of semester" [value]="sem.value">
-      {{level.viewValue}}
+    <mat-option *ngFor="let sem of semesters" [value]="sem.value">
+      {{sem.viewValue}}
     </mat-option>
   </mat-select>
 </mat-form-field>
