--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -26,7 +26,7 @@ h2{
 }
 .logo {
     margin-bottom: 0%;
-    margin-top: 10%;    
+    margin-top: 10%;
   }
 .container {
     align-self: center;
@@ -39,8 +39,15 @@ h2{
     margin-right: 20%;
     margin-top: 0%;
     border-radius: 5px;
+
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 h2{
     color: white;
     font-size-adjust: 20%;
+}
+
+.keywords-chip-list {
+  width: auto !important;
 }
