--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.css
@@ -1,7 +1,6 @@
 .input {
-    min-width: 150px;
-    max-width: 230px;
     width: 100%;
+    max-width: 60%;
   }
 .check {
     margin-top:10px;
@@ -13,13 +12,17 @@
     margin-block-start: 20px;
   }
 .selector {
-    margin: 0px;
+    margin-bottom: 5px;
 }
 @media all and (min-width: 900px) {
 .columns{
-       -webkit-column-count: 2; 
+    -webkit-column-count: 2; 
     -moz-column-count: 2; 
     column-count:2;
+}
+.column{
+    float: left;
+    width: 50%;
 }
 }
 .form{
