--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -3,15 +3,15 @@
 .bgexplorer {
     max-width: 100%;
     width: 100%;
-    position: absolute;
+    position:absolute;
     top: 0;
     right: 0;
-    min-height: 35.5em;
+    min-height: 45.5em;
     height: 100vh !important;
     max-height: 100%;
     background-image: url(../../images/world.jpg);
     background-size: cover;
-    background-position: center center;
+    background-position: center;
 }
 h1{
     font-family:  'Inconsolata';
@@ -32,14 +32,14 @@ h2{
     align-self: center;
     margin: 20px;
     background: white;
-    max-width: 60%;
-    max-height: 80%;
+    max-width: 80%;
+    max-height: 150%;
     position: relative;
     margin-left: 20%;
     margin-right: 20%;
+    margin-bottom: 20%;
     margin-top: 0%;
     border-radius: 5px;
-
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
