--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -1,19 +1,20 @@
 <div class="form">
     <div class="column">
-        <mat-form-field class="input" style="width: 90% !important;" >
-          <mat-chip-list #chipList>
+        <mat-form-field class="input">
+            <input matInput placeholder="Search for keywords"
+            [matChipInputFor]="chipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="add($event)"/>
+        <mat-chip-list #chipList>
             <mat-chip *ngFor="let keyword of keyword" [selectable]="selectable"
                       [removable]="removable" (remove)="remove(keyword)">
               {{keyword.name}}
               <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
             </mat-chip>
-            <input placeholder="What do you want to study?"
-                   [matChipInputFor]="chipList"
-                   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                   [matChipInputAddOnBlur]="addOnBlur"
-                   (matChipInputTokenEnd)="add($event)"/>
           </mat-chip-list>
         </mat-form-field>
+        <br/>
         <mat-form-field class="selector">
             <mat-select placeholder="English Level">
               <mat-option *ngFor="let level of levels" [value]="level.value">
@@ -21,6 +22,7 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <br/>
           <mat-form-field class="selector">
             <mat-select placeholder="Semester">
               <mat-option *ngFor="let sem of semesters" [value]="sem.value">
@@ -33,21 +35,7 @@
             <mat-radio-button class="check" value="undergraduate" [checked]="true">Undergraduate</mat-radio-button>
             <mat-radio-button class="check" value="graduate">Graduate</mat-radio-button>
           </mat-radio-group>
-          <br/>
       </div>
-    <!--
-  <form class="form">
-  <mat-form-field class="input">
-    <input placeholder="What do you want to study?" matInput [formControl]="controlCourses" [matAutocomplete]="auto">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let course of coursesAvailable" [value]="course.name">
-        {{ course.name }}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-  
-  </form>
-  -->
   <div class="column">
      <mat-form-field class="input">
         <input placeholder="Where do you want to study?" matInput [formControl]="coursesControl"
@@ -91,5 +79,10 @@
       <br/>
     </div>
 </div>
-<div float="left"><button mat-raised-button color="primary" float="down" margin=10px>Go</button></div>
+<div class="button">
+  <button mat-raised-button color="primary" margin=10px>Go</button>
+</div>
+
+
+
 
