--- a/frontend/csyllabus/src/app/core/explorer/result/result.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/result/result.component.css
@@ -8,18 +8,19 @@
   display: flex;
   flex-direction: column;
   position: relative;
-}
-
+ }
 
 .explorer-table-header {
   display: flex;
   font-size: 20px;
+
 }
 
 .mat-form-field {
   font-size: 14px;
   flex-grow: 1;
   margin-left: 32px;
+  margin-top: 150px;
 }
 
 .mat-header-row {
@@ -31,6 +32,7 @@
 .mat-table {
   overflow: auto;
   text-align: left;
+  justify-content: center;
 }
 
 .mat-header-cell {
@@ -40,19 +42,55 @@
   
 }
 
-.mat-cell {
-  font-weight: bold;
-}
-
-.mat-card {
-  min-width: 100%;
-}
-
-
 .mat-column-score {
   flex: 0 0 5%;
   font-size: 20px;
   justify-content: center;
+  font-weight: bold;
+  margin-right: 10px;
 }
+
+.mat-column-result {
+  font-size: 20px;
+  justify-content: center;
+  font-weight: bold;
+}
+
+
+.mat-cell {
+  padding-top: 1em;
+  margin-left: 10px;
+}
+
+.mat-mini-fab {
+  margin-left: 5px;
+}
+
+.mat-card-subtitle {
+  color: #000000;
+  font-weight: bold;
+}
+
+.sub-sub-title {
+  color: #A9A9A9;
+}
+
+.description-syllabus {
+  color: #696969;
+}
+
+.score-shape {
+
+  display: block;
+  text-align: center;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  color: #000;
+  background: #A9A9A9;
+  width: 100%;
+  height: 0;
+}
+
 
 
