--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.css
@@ -1,7 +1,9 @@
+.form {
+    margin: 20px;
+  }
 .input {
-    min-width: 150px;
-    max-width: 230px;
     width: 100%;
+    max-width: 80%;
   }
 .check {
     margin-top:10px;
@@ -9,19 +11,23 @@
     font-size: 80%;
     margin-left: 10px;
     margin-right: 10px;
-    margin-block-end: 20px;
-    margin-block-start: 20px;
   }
 .selector {
-    margin: 0px;
+    margin:5px;
 }
 @media all and (min-width: 900px) {
-.columns{
-       -webkit-column-count: 2; 
-    -moz-column-count: 2; 
-    column-count:2;
+.column{
+    float: left;
+    width: 50%;
 }
+.fixeds{
+    width: 100%;
+    column-count: 1;
 }
-.form{
-    margin: 20px;
+.button{
+    float: right;
+     width:100%;
+     margin: 10px;
+ }
 }
+
