--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -1,23 +1,43 @@
 <div class="form">
-  <div class="columns" flex>
-    <!--
-  <form class="form">
-  <mat-form-field class="input">
-    <input placeholder="What do you want to study?" matInput [formControl]="controlCourses" [matAutocomplete]="auto">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let course of coursesAvailable" [value]="course.name">
-        {{ course.name }}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-  <br />
-  <mat-form-field class="input">
-    <input matInput placeholder="Where do you want to study?">
-  </mat-form-field>
-  </form>
-  -->
-    <div>
-      <mat-form-field class="input">
+    <div class="column">
+        <mat-form-field class="input">
+            <input matInput placeholder="Search for keywords"
+            [matChipInputFor]="chipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="add($event)"/>
+        <mat-chip-list #chipList>
+            <mat-chip *ngFor="let keyword of keyword" [selectable]="selectable"
+                      [removable]="removable" (remove)="remove(keyword)">
+              {{keyword.name}}
+              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+            </mat-chip>
+          </mat-chip-list>
+        </mat-form-field>
+        <br/>
+        <mat-form-field class="selector">
+            <mat-select placeholder="English Level">
+              <mat-option *ngFor="let level of levels" [value]="level.value">
+                {{level.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <br/>
+          <mat-form-field class="selector">
+            <mat-select placeholder="Semester">
+              <mat-option *ngFor="let sem of semesters" [value]="sem.value">
+                {{sem.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <br/>
+          <mat-radio-group [(ngModel)]="queryLevel" (change)="filterProgramsByLevel()">
+            <mat-radio-button class="check" value="undergraduate" [checked]="true">Undergraduate</mat-radio-button>
+            <mat-radio-button class="check" value="graduate">Graduate</mat-radio-button>
+          </mat-radio-group>
+      </div>
+  <div class="column">
+     <mat-form-field class="input">
         <input placeholder="Where do you want to study?" matInput [formControl]="coursesControl"
                [matAutocomplete]="countries_auto" [(ngModel)]="queryCountry">
         <mat-autocomplete #countries_auto="matAutocomplete" [displayWith]="displayCountrySelect"
@@ -47,13 +67,6 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
-    </div>
-    <div>
-      <mat-radio-group [(ngModel)]="queryLevel" (change)="filterProgramsByLevel()">
-        <mat-radio-button class="check" value="undergraduate" [checked]="true">Undergraduate</mat-radio-button>
-        <mat-radio-button class="check" value="graduate">Graduate</mat-radio-button>
-      </mat-radio-group>
-      <br/>
       <mat-form-field class="input" *ngIf="queryUniversity">
         <input placeholder="Any specific program?" matInput [formControl]="programsControl"
                [matAutocomplete]="programs_auto" [(ngModel)]="queryProgram">
@@ -64,43 +77,12 @@
         </mat-autocomplete>
       </mat-form-field>
       <br/>
-      <mat-form-field class="selector">
-        <mat-select placeholder="English Level">
-          <mat-option *ngFor="let level of levels" [value]="level.value">
-            {{level.viewValue}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <br/>
-      <mat-form-field class="selector">
-        <mat-select placeholder="Semester">
-          <mat-option *ngFor="let sem of semesters" [value]="sem.value">
-            {{sem.viewValue}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
     </div>
-  </div>
-
-    <div style="border-top: 1px solid #adadad; margin-top: 10px; margin-bottom: 10px;"></div>
-  <div *ngIf="showKeywords">
-    <mat-form-field class="keywords-chip-list" style="width: 90% !important;" >
-      <mat-chip-list #chipList>
-        <mat-chip *ngFor="let keyword of keyword" [selectable]="selectable"
-                  [removable]="removable" (remove)="remove(keyword)">
-          {{keyword.name}}
-          <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-        </mat-chip>
-        <input placeholder="Add a keywoard..."
-               [matChipInputFor]="chipList"
-               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-               [matChipInputAddOnBlur]="addOnBlur"
-               (matChipInputTokenEnd)="add($event)"/>
-      </mat-chip-list>
-    </mat-form-field>
-
-  </div>
-  <mat-button-toggle (click)="showKeywords = !showKeywords">Search for keywords!</mat-button-toggle>
-  <button mat-raised-button color="primary" margin=10px>Go</button>
-
 </div>
+<div class="button">
+  <button mat-raised-button color="primary" margin=10px>Go</button>
+</div>
+
+
+
+
