--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -9,8 +9,10 @@
       <mat-tab label="Comparator">Content 2</mat-tab>
     </mat-tab-group>
   </div>
-  <div><app-explorer-result></app-explorer-result></div>
+  <span (show)="show('showTable')" class="app-explorer"></span>
+  <div *ngIf="true"><app-explorer-result></app-explorer-result></div>
 </div>
+
 
 
 
