added a router, fixed 10/13 unit test failures and fied bunch of lint errors

--- a/frontend/csyllabus/src/app/app.component.html
+++ b/frontend/csyllabus/src/app/app.component.html
@@ -1,9 +1,9 @@
 
 <div style="text-align:center">
-  <app-core></app-core>
+  <router-outlet></router-outlet>
 </div>
 
-<!-- sample calls for services - to remove 
+<!-- sample calls for services - to remove
 
 <h1>
     Welcome to {{title}}!
@@ -95,6 +95,3 @@
 *getting data from mock-api
 
 -->
-
-
->>>>>>> dev
