--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,15 +1,13 @@
 <div class="bgexplorer">
-  <img src="https://image.ibb.co/fQCOXb/logo.png" height="140" width="140">
+  <img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
+  <img class="logo-img" src="https://image.ibb.co/fQCOXb/logo.png" height="140" width="140">
   <h1>CSYLLABUS v1.0</h1>
   <h2>Global Computer Science Repository</h2>
   <div class="container" align="center">
     <mat-tab-group>
-      <mat-tab label="Explorer"><app-explorer></app-explorer></mat-tab>
+      <mat-tab label="Explorer"><app-explorer (backgroundImage)="changeBackgroundImage($event)"></app-explorer></mat-tab>
       <mat-tab label="Comparator">Content 2</mat-tab>
     </mat-tab-group>
   </div>
   <div><app-explorer-result></app-explorer-result></div>
 </div>
-
-
-
