--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -39,7 +39,7 @@
   <div class="column">
      <mat-form-field class="input">
         <input placeholder="Where do you want to study?" matInput [formControl]="coursesControl"
-               [matAutocomplete]="countries_auto" [(ngModel)]="queryCountry">
+               [matAutocomplete]="countries_auto" [(ngModel)]="queryCountry" (ngModelChange)="filterCitiesByCountry()">
         <mat-autocomplete #countries_auto="matAutocomplete" [displayWith]="displayCountrySelect"
                           (optionSelected)="filterCitiesByCountry()">
           <mat-option *ngFor="let country of countries" [value]="country">
