Api refactor zvone (#16)
* backend - GET /countries same as mock data

* backend - GET /cities same as mock data

* backend - GET universities same as mocked data, POST,PUT DELETE /universities done

* backend - GET /faculties done

* backend - /explorer initial implementation working

* backend - django UPDATE!!! run requirements again!

* backend - api refactor

* backend - explorer initail

* backend - explorer initail

* backend - explorer initail

* hmm - settings

* university api refactor

--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -15,13 +15,15 @@
           </mat-chip-list>
         </mat-form-field>
         <br/>
-
-
-          <mat-radio-group [(ngModel)]="queryLevel">
-            <mat-radio-button class="check" value="undergraduate" [checked]="true">Undergraduate</mat-radio-button>
-            <mat-radio-button class="check" value="graduate">Graduate</mat-radio-button>
-          </mat-radio-group>
-      <mat-form-field class="selector">
+        <mat-form-field class="selector">
+            <mat-select placeholder="English Level">
+              <mat-option *ngFor="let level of levels" [value]="level.value">
+                {{level.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <br/>
+          <mat-form-field class="selector">
             <mat-select placeholder="Semester">
               <mat-option *ngFor="let sem of semesters" [value]="sem.value">
                 {{sem.viewValue}}
@@ -29,6 +31,10 @@
             </mat-select>
           </mat-form-field>
           <br/>
+          <mat-radio-group [(ngModel)]="queryLevel">
+            <mat-radio-button class="check" value="undergraduate" [checked]="true">Undergraduate</mat-radio-button>
+            <mat-radio-button class="check" value="graduate">Graduate</mat-radio-button>
+          </mat-radio-group>
       </div>
   <div class="column">
      <mat-form-field class="input">
@@ -73,7 +79,7 @@
     </div>
 </div>
 <div class="button">
-  <button mat-raised-button color="primary" margin=10px>Search</button>
+  <button mat-raised-button color="primary" margin=10px>Go</button>
 </div>
 
 
