--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -9,7 +9,7 @@
     min-height: 45.5em;
     height: 100vh !important;
     max-height: 100%;
-    background-image: url(../../images/world.jpg);
+    background-color:#0080ff;
     background-size: cover;
     background-position: center;
 }
